dElevan.mOct.com

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>This content only for girls.</p>
       </div>
       <button class="tablink" onclick="openCity('Project5', this, '#9f3ca0')" id="defultopen" >Project 5</button>
-      <button class="tablink" onclick="openCity('Colors', this, '#6e92f3')" ><a href="/Users/Didar/Documents/GitHub/dElevan.mOct.com/index (2).html">Colors</a></button>
+      <button class="tablink" onclick="openCity('Colors', this, '#6e92f3')" ><a href="/Users/Didar/Documents/GitHub/dElevan.mOct.com/1.html">Colors</a></button>
       <button class="tablink" onclick="openCity('Paris', this, '#3f9571')">Paris</button>
       <button class="tablink" onclick="openCity('Oslo', this, 'orange')">Oslo</button>
       <button class="tablink" onclick="openCity('hello', this, '#75f0b5')">Hello</button>
